add camunda and vavr